# Screen-recording

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
docs/: architecture.md
scripts/: build-debug.ps1  build-release.ps1  run-debug.ps1  run-release.ps1
src/app/: ApplicationContext.cpp  ApplicationContext.h  main.cpp
src/audio/: IAudioCaptureSource.h
src/capture/: ICaptureSource.h
src/common/: OperationResult.h
src/core/: RecordingTypes.h
src/encoding/: IAudioEncoder.h  IVideoEncoder.h
src/muxing/: IMp4Muxer.h
src/pipeline/: Packets.h
src/platform/windows/: MonitorEnumerator.cpp  MonitorEnumerator.h  WasapiLoopbackCapture.cpp  WasapiLoopbackCapture.h  WgcVideoRecorderBackend.cpp  WgcVideoRecorderBackend.h  WinRtHelpers.cpp  WinRtHelpers.h  WindowEnumerator.cpp  WindowEnumerator.h
src/recording/: IRecordingBackend.h  RecordingController.cpp  RecordingController.h  RecordingSession.cpp  RecordingSession.h
src/ui/: MainWindow.cpp  MainWindow.h  RegionSelectionOverlay.cpp  RegionSelectionOverlay.h
